# cmem-server

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
.sqlx/: query-00cb50ecfa99d4f5e4914857cdd8537fcf72f7ec3fd5d3b5fd9f232f100176f0.json  query-0209c47f8bc11bb29d65217e398b06ce192bcafade73d82e2cd8167cdcc36dc6.json  query-03632cc8e3169576db283e6bf10dbddfd82802466aef1074d7d383805fb0f96b.json  query-042b264463957ea95e57c450b84485a21e6c20bd4cf19e86fc0757488c9aaeb4.json  query-04923cbf338332b2ff2dedbd1ad355fb667f0fa3a26796fec9cc531e6d3b5090.json  query-0678429f1cb345281cd4cfe70e11489383c68d4df507d491f5a4297ad7e2f44f.json  query-078f5417f17f7ebddef31a32ab0bbc7999767b05e6ddb4fbbb99789a0c6b8efc.json  query-08d2d9cfcd31ccf45fe87e18da3442be594f4e2f3217d1c32ee6a3c8099aba5b.json  query-09d7f55558f2e33d6f988ae69e2ad1555a75a8a4735dc6e8b7292b44637b5e56.json  query-0d9ef12e2bae408879db9af8b318880f483b2bfadcf43c7e5cf85d3ce4f435c2.json  query-10cec3f0b92d214d88ff1ebfba02f04bac2364d56fc97b82247e6a26d06d7ee3.json  query-1163d801aa80745ced7d90d927f9ef581841d8ec8dccb9247c758860b708aa6d.json  query-13474848a708b8043e90ee3933dd6e20a82369dfd3142e37cc068bd927f47639.json  query-18b3dc740f1dd3207c0208ef1c27cc362feba9b048a61a0f0fe52e4e449b2f0a.json  query-1a01ba2ebafc456965c19ee00da0fd36a328045ea826ef1f1821e788b6f2de04.json  query-1f7f2f2b0608986e411acd8aba745882e7d7f80ea6ce32d4086b10fc7ee9eb7b.json  query-23a5e869c970389cb5f76138511f4cb425555ec18563edb4950f5a400d0c5171.json  query-27685f5ac3431a6cfca60c1495094e43472715e8f5b2350b54364e1e7fff5b99.json  query-28eb358471c96ce6298daf2318afee33e5807dd4f371c766e11ecc1c4597e000.json  query-2aa842f1be970f827ad51898a495a61e9bf646aa14de0fe7fe479d469942256d.json  query-2b2cdee85dbfb30ec162adba8b56f33b19d0d06e1077bb348519d77e343926c1.json  query-2f52934bc7a116031fac22d071be322c17d317a898ecaa7d759aafb28edda2d5.json  query-2fd5f5778fe08c3e76a67ec11dbdbd88b4b6c53cd4a65a098eb0459d0f1eab08.json  query-310183fe189ac964e26d3af381dc94b60e42ba91f7d6fc89d00133ce49aade83.json  query-3350e4427f31ec85f34b86f490776eae0ebb79a0291472d3e95266954a458ea9.json  query-34268ed5590bc4919a94f3ecb393ffb15b03ae55a78a33b218830e884727a989.json  query-34d35f08560bf8a11604a5a695d238baf488e20816c7883e20c4945e999e7cfb.json  query-36f41c1f4ad42ee0873562d27e082674b934ff0528aee47ed3f804b1286dff1e.json  query-37a28a251d0e74590d712ae27b096a0792a2ca8f61677d2a87e1ca12c354de22.json  query-3a33110ab1ecdfe38ba603bd103f613c2b6140967523f398c982493c96c68efc.json  query-3b8abd0488dbd6f6b3f09a6f6d7df8a9024997c7851175ab75fd8270d6d7b7f5.json  query-41ac956a457e2c3e2562e5a768618549cefaf38c7ae0dfaf62ae72509829a430.json  query-41f718155cea4249f2822d50f08765d7518a292f8067dbe9d7972f33784d9e43.json  query-44c1125e480cf970df9c761849221f207f4a619d9da6bfcaf27be931f62dd917.json  query-44d9679349258c1fc045d0153b9c59a6bbb9c19f50344865561dc5f8d8275edc.json  (+67 more)
crates/server/: Cargo.toml
crates/server/i18n/: ar.json  bn.json  cs.json  da.json  de.json  el.json  en.json  es.json  fi.json  fr.json  he.json  hi.json  hu.json  id.json  it.json  ja.json  ko.json  nl.json  no.json  pl.json  pt-br.json  ro.json  ru.json  sv.json  th.json  tr.json  uk.json  ur.json  vi.json  zh-tw.json  zh.json
crates/server/src/: config.rs  error.rs  lib.rs  main.rs  server.rs  state.rs
crates/server/src/admin/: handlers.rs  middleware.rs  mod.rs
crates/server/src/admin/web/: CLAUDE.md  export.rs  handlers.rs  i18n.rs  mod.rs  templates.rs
crates/server/src/auth/: handlers.rs  jwt.rs  mod.rs  password.rs  tokens.rs
crates/server/src/commands/: admin.rs  mod.rs  serve.rs
crates/server/src/db/: audit.rs  invites.rs  machines.rs  mod.rs  observations.rs  projects.rs  settings.rs  shares.rs  stats.rs  tokens.rs  users.rs
crates/server/src/db/migrations/: 001_init.sql  002_admin_ip.sql  003_server_settings.sql  004_project_paths_last_seen.sql  005_projects_soft_delete.sql
crates/server/src/machines/: handlers.rs  mod.rs
crates/server/src/middleware/: auth.rs  csrf.rs  ip.rs  mod.rs  ratelimit.rs
crates/server/src/projects/: fork.rs  handlers.rs  identification.rs  mod.rs
crates/server/src/shares/: handlers.rs  mod.rs  permissions.rs
crates/server/src/sync/: handlers.rs  mod.rs  pull.rs  push.rs
crates/server/templates/: CLAUDE.md  audit.html  base.html  dashboard.html  export.html  invites.html  login.html  observations.html  project_detail.html  projects.html  register.html  settings.html  shares.html  trash.html  user_detail.html  users.html
crates/server/tests/: admin_cli.rs  admin_web.rs  admin_web_e2e.rs  project_resolve.rs  security_csrf.rs  security_ip.rs  security_ratelimit.rs  share_flow.rs  sync_flow.rs
crates/server/tests/common/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: api.rs  error.rs  lib.rs  models.rs  share_mode.rs
docs/: ADMIN.md  API.md  ARCHITECTURE.md  (+7 more)
(+19 files in other folders)
