[package]
name = "cmem-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cmem-server"
path = "src/main.rs"

[dependencies]
cmem-shared = { path = "../shared" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

sqlx = { workspace = true }

argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
nanoid = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }
tabled = { workspace = true }
rpassword = { workspace = true }

# admin web 后台
askama = { workspace = true }
askama_axum = { workspace = true }
csv = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
cookie = { workspace = true }
tempfile = { workspace = true }

# 安全加固
ipnet = { workspace = true }
tower_governor = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
