[package]
name = "cmem-shared"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared types between cmem-server and cmem-sync clients"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
